--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "login",
+    "password": "testroot",
+    "database": "events_db",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "testroot",
+    "database": "events_db",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
