--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "events",
   "version": "1.0.0",
   "description": "",
@@ -20,11 +19,12 @@
   },
   "homepage": "https://github.com/Ilene0413/events#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
     "sequelize": "^4.43.0"
- }
+  }
 }
