--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/Ilene0413/events#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
+    "sequelize": "^4.43.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
