--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "bugs": {
     "url": "https://github.com/Ilene0413/events/issues"
   },
+  "engines": {
+    "node": "8.12.0"
+  },
   "homepage": "https://github.com/Ilene0413/events#readme",
   "dependencies": {
     "axios": "^0.18.0",
